# mini-redis

./: Cargo.toml  README.md  run.sh  test.sh
idl/: mini_redis.thrift
src/: lib.rs
